@@ -3,6 +3,8 @@ some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
 Changelog for sg3_utils-1.43 [20180321] [svn: r763]
+  - https://github.com/doug-gilbert/sg3_utils/pull/17
+    applied with tweaks: add timeout parameter [svn:r946]
   - sg_write_x: where x can be normal, atomic, or(write),
     same, scattered, or stream writes with 16 or 32 byte
     cdbs (sbc4r04 for atomic, sbc4r11 for scattered)
